[tool.poetry]
name = "jlab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.3"
finviz-platform = {git = "https://github.com/mariostoev/finviz"}
finvizfinance = "^0.14.7"
pymongo = "^4.6.2"
fdc = {git = "https://github.com/ggg5269/FDC"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
